Fix members menu popup is not correctly aligned

--- a/frontend/resources/styles/main/partials/dashboard-team.scss
+++ b/frontend/resources/styles/main/partials/dashboard-team.scss
@@ -195,7 +195,7 @@
     border-radius: 4px;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 12;
-    top: 40px;
+    top: 30px;
     left: 6px;
     width: 155px;
 
